@@ -1,5 +1,6 @@
 0.2.9
 
+* typo fixed detailes -> details
 * restore ./inc in Git scm to allow `cpanm` install via git url
 
 0.2.8 2016-12-27
